[gd_scene load_steps=9 format=3 uid="uid://b02ownp57ivti"]

[ext_resource type="Script" uid="uid://dgr2d61l7e6du" path="res://scripts/world.gd" id="1_tmq7g"]
[ext_resource type="PackedScene" uid="uid://bjkdkwbjygm8e" path="res://scenes/enemies/pink_triangle_enemy.tscn" id="2_43fak"]
[ext_resource type="Texture2D" uid="uid://dha2vdeuhn375" path="res://assets/sprites/blue_grid_sprite.png" id="3_scdbs"]
[ext_resource type="Script" uid="uid://b6j5us84w2lmg" path="res://scripts/enemy_path.gd" id="5_hfr0h"]
[ext_resource type="PackedScene" uid="uid://y1hrxoxnst46" path="res://scenes/ui/hud.tscn" id="6_7sfyy"]
[ext_resource type="PackedScene" uid="uid://fk6o143go7xl" path="res://scenes/ui/title_screen.tscn" id="7_43fak"]
[ext_resource type="PackedScene" uid="uid://gwmqevrqe3qo" path="res://scenes/ui/game_over_screen.tscn" id="8_scdbs"]

[sub_resource type="Curve2D" id="Curve2D_qfnet"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -820, -580, 0, 0, 0, 0, -820, 580, 0, 0, 0, 0, 820, 580, 0, 0, 0, 0, 820, -580, 0, 0, 0, 0, -820, -580)
}
point_count = 5

[node name="World" type="WorldEnvironment"]
script = ExtResource("1_tmq7g")
pink_triangle_enemy_scene = ExtResource("2_43fak")

[node name="Background" type="Parallax2D" parent="."]
z_index = -1
repeat_size = Vector2(640, 640)
repeat_times = 5

[node name="GridSprite" type="Sprite2D" parent="Background"]
texture_repeat = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_scdbs")
region_enabled = true
region_rect = Rect2(0, 0, 8000, 8000)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_qfnet")
script = ExtResource("5_hfr0h")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(-820, -580)
rotation = 1.5707964

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="HUD" parent="." instance=ExtResource("6_7sfyy")]

[node name="GameTimer" type="Timer" parent="."]

[node name="TitleScreen" parent="." instance=ExtResource("7_43fak")]

[node name="GameOverWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="GameOverScreen" parent="." instance=ExtResource("8_scdbs")]
visible = false

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="GameOverWaitTimer" to="." method="_on_game_over_scene_timer_timeout"]
